@@ -1,10 +1,0 @@
-[Desktop Entry]
-Name=Galaxy
-Type=X-GNOME-Metatheme
-Comment=Mandrake Linux theme
-Encoding=UTF-8
-
-[X-GNOME-Metatheme]
-GtkTheme=Galaxy
-MetacityTheme=Galaxy
-IconTheme=gnome
