@@ -1,7 +1,7 @@
 [Desktop Entry]
-Name=Galaxy
+_Name=Galaxy
 Type=X-GNOME-Metatheme
-Comment=Mandrake Linux theme
+_Comment=Mandrake Linux theme
 Encoding=UTF-8
 
 [X-GNOME-Metatheme]
