@@ -42,7 +42,7 @@ AC_FUNC_MMAP
 AC_FUNC_ALLOCA
 AC_CHECK_FUNCS(setenv putenv)
 
-ALL_LINGUAS="sv"
+ALL_LINGUAS="de sv"
 AM_GLIB_GNU_GETTEXT
 
 AC_OUTPUT([
