@@ -1,3 +1,4 @@
+Galaxy/index.theme.in
 Gorilla/icons/index.theme.in
 Gorilla/index.theme.in
 Lush/icons/index.theme.in
