@@ -1,3 +1,8 @@
+2003-05-07  Christian Neumair  <chris@gnome-de.org>
+
+	* POTFILES.in: Added missing file.
+	* de.po: Added German translation.
+
 2003-05-07  Christian Rose  <menthos@menthos.com>
 
 	* POTFILES.in: Added missing files.
